Fix spacing between summary panels

--- a/CSS/legal/style.less
+++ b/CSS/legal/style.less
@@ -12361,7 +12361,7 @@ h6.micro {
     display: inline-block;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),0 1px 5px 0 rgba(0,0,0,0.2);
     border: 1px solid rgba(0,0,0,0.1);
-    width: ~"calc(16.6666% - 18px)";
+    width: ~"calc(16.6666% - 20px)";
     max-width: 200px;
     margin-right: 18px;
 }
@@ -12370,7 +12370,7 @@ h6.micro {
     display: inline-block;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),0 1px 5px 0 rgba(0,0,0,0.2);
     border: 1px solid rgba(0,0,0,0.1);
-    width: ~"calc(25.0000% - 12px)";
+    width: ~"calc(25.0000% - 14px)";
     max-width: 300px;
     margin-right: 18px;
 }
@@ -12379,7 +12379,7 @@ h6.micro {
     display: inline-block;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),0 1px 5px 0 rgba(0,0,0,0.2);
     border: 1px solid rgba(0,0,0,0.1);
-    width: ~"calc(33.3333% - 13.5px)";
+    width: ~"calc(33.3333% - 15.5px)";
     max-width: 400px;
     margin-right: 18px;
 }
@@ -12388,7 +12388,7 @@ h6.micro {
     display: inline-block;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),0 1px 5px 0 rgba(0,0,0,0.2);
     border: 1px solid rgba(0,0,0,0.1);
-    width: ~"calc(41.6666% - 14.4px)";
+    width: ~"calc(41.6666% - 16.4px)";
     max-width: 500px;
     margin-right: 18px;
 }
@@ -12397,7 +12397,7 @@ h6.micro {
     display: inline-block;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),0 1px 5px 0 rgba(0,0,0,0.2);
     border: 1px solid rgba(0,0,0,0.1);
-    width: ~"calc(50.0000% - 15px)";
+    width: ~"calc(50.0000% - 17px)";
     max-width: 600px;
     margin-right: 18px;
 }
@@ -12406,7 +12406,7 @@ h6.micro {
     display: inline-block;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),0 1px 5px 0 rgba(0,0,0,0.2);
     border: 1px solid rgba(0,0,0,0.1);
-    width: ~"calc(58.3333% - 15.4px)";
+    width: ~"calc(58.3333% - 17.4px)";
     max-width: 700px;
     margin-right: 18px;
 }
@@ -12415,7 +12415,7 @@ h6.micro {
     display: inline-block;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),0 1px 5px 0 rgba(0,0,0,0.2);
     border: 1px solid rgba(0,0,0,0.1);
-    width: ~"calc(66.6666% - 15.75px)";
+    width: ~"calc(66.6666% - 17.75px)";
     max-width: 800px;
     margin-right: 18px;
 }
@@ -12424,7 +12424,7 @@ h6.micro {
     display: inline-block;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),0 1px 5px 0 rgba(0,0,0,0.2);
     border: 1px solid rgba(0,0,0,0.1);
-    width: ~"calc(75.0000% - 16px)";
+    width: ~"calc(75.0000% - 18px)";
     max-width: 900px;
     margin-right: 18px;
 }
@@ -12433,7 +12433,7 @@ h6.micro {
     display: inline-block;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),0 1px 5px 0 rgba(0,0,0,0.2);
     border: 1px solid rgba(0,0,0,0.1);
-    width: ~"calc(83.3333% - 18px)";
+    width: ~"calc(83.3333% - 20px)";
     max-width: 1000px;
     margin-right: 18px;
 }
@@ -12442,14 +12442,14 @@ h6.micro {
     display: inline-block;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),0 1px 5px 0 rgba(0,0,0,0.2);
     border: 1px solid rgba(0,0,0,0.1);
-    width: ~"calc(91.6666% - 18px)";
+    width: ~"calc(91.6666% - 20px)";
     max-width: 1100px;
     margin-right: 18px;
 }
 
 .card12 {
     display: inline-block;
-    width: ~"calc(100% - 18px)";
+    width: ~"calc(100% - 20px)";
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),0 1px 5px 0 rgba(0,0,0,0.2);
     border: 1px solid rgba(0,0,0,0.1);
 }
